--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,1 @@
-<!--<dashboard-tile a="100" b="50" c="25"></dashboard-tile>-->
-<p>hello</p>
+<dashboard-tile a="100" b="50" c="25"></dashboard-tile>
